// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Actions Actions with one Button renders Actions with one Button 1`] = `
Object {
  "elements": Array [
    Object {
      "action_id": undefined,
      "confirm": undefined,
      "style": undefined,
      "text": Object {
        "emoji": undefined,
        "text": "Click me",
        "type": "plain_text",
      },
      "type": "button",
      "url": undefined,
    },
  ],
  "type": "actions",
}
`;

exports[`Actions Actions with two Buttons renders Actions with two Buttons 1`] = `
Object {
  "elements": Array [
    Object {
      "action_id": undefined,
      "confirm": undefined,
      "style": undefined,
      "text": Object {
        "emoji": undefined,
        "text": "Click me",
        "type": "plain_text",
      },
      "type": "button",
      "url": undefined,
    },
    Object {
      "action_id": undefined,
      "confirm": undefined,
      "style": undefined,
      "text": Object {
        "emoji": undefined,
        "text": "No, click me",
        "type": "plain_text",
      },
      "type": "button",
      "url": undefined,
    },
  ],
  "type": "actions",
}
`;

exports[`Button Button with Confirm component renders Button with emoji text property 1`] = `
Object {
  "action_id": undefined,
  "confirm": Object {
    "confirm": Object {
      "text": "Yes, I confirm!",
      "type": "plain_text",
    },
    "deny": Object {
      "text": "No, go away!",
      "type": "plain_text",
    },
    "isConfirm": [Function],
    "style": undefined,
    "text": Object {
      "text": "Do you confirm me?",
      "type": "plain_text",
    },
    "title": Object {
      "text": "Confirm me?",
      "type": "plain_text",
    },
  },
  "style": undefined,
  "text": Object {
    "emoji": true,
    "text": "Click me",
    "type": "plain_text",
  },
  "type": "button",
  "url": undefined,
}
`;

exports[`Button Button with action property renders Button with value property 1`] = `
Object {
  "action_id": "click",
  "confirm": undefined,
  "style": undefined,
  "text": Object {
    "emoji": undefined,
    "text": "Click me",
    "type": "plain_text",
  },
  "type": "button",
  "url": undefined,
}
`;

exports[`Button Button with danger style renders Button with danger style 1`] = `
Object {
  "action_id": undefined,
  "confirm": undefined,
  "style": "danger",
  "text": Object {
    "emoji": undefined,
    "text": "Click me",
    "type": "plain_text",
  },
  "type": "button",
  "url": undefined,
}
`;

exports[`Button Button with emoji property renders Button with emoji text property 1`] = `
Object {
  "action_id": undefined,
  "confirm": undefined,
  "style": undefined,
  "text": Object {
    "emoji": true,
    "text": "Click me",
    "type": "plain_text",
  },
  "type": "button",
  "url": undefined,
}
`;

exports[`Button Button with url renders Button with url 1`] = `
Object {
  "action_id": undefined,
  "confirm": undefined,
  "style": undefined,
  "text": Object {
    "emoji": undefined,
    "text": "Click me",
    "type": "plain_text",
  },
  "type": "button",
  "url": "https://google.com",
}
`;

exports[`Button Default button renders Button with default properties 1`] = `
Object {
  "action_id": undefined,
  "confirm": undefined,
  "style": undefined,
  "text": Object {
    "emoji": undefined,
    "text": "Click me",
    "type": "plain_text",
  },
  "type": "button",
  "url": undefined,
}
`;

exports[`Channel Select Menu Channel Select Menu with initial channel property renders a Channel Select Menu with initial channel property 1`] = `
Object {
  "action_id": "select",
  "confirm": undefined,
  "initial_channel": "C12345",
  "onSearchOptions": undefined,
  "placeholder": Object {
    "text": "a placeholder",
    "type": "plain_text",
  },
  "type": "channels_select",
}
`;

exports[`Channel Select Menu Default Channel Select Menu renders a default Channel Select Menu 1`] = `
Object {
  "action_id": "select",
  "confirm": undefined,
  "initial_channel": undefined,
  "onSearchOptions": undefined,
  "placeholder": Object {
    "text": "a placeholder",
    "type": "plain_text",
  },
  "type": "channels_select",
}
`;

exports[`Checkboxes Checkboxes with Confirm component renders Checkboxes with Confirm component 1`] = `
Object {
  "action_id": "options",
  "confirm": Object {
    "confirm": Object {
      "text": "Yes, I confirm!",
      "type": "plain_text",
    },
    "deny": Object {
      "text": "No, go away!",
      "type": "plain_text",
    },
    "isConfirm": [Function],
    "style": undefined,
    "text": Object {
      "text": "Do you confirm me?",
      "type": "plain_text",
    },
    "title": Object {
      "text": "Confirm me?",
      "type": "plain_text",
    },
  },
  "initial_options": Array [
    Object {
      "description": undefined,
      "isOption": [Function],
      "isSelected": [Function],
      "text": Object {
        "text": "hey",
        "type": "plain_text",
      },
      "url": undefined,
      "value": "1",
    },
    Object {
      "description": undefined,
      "isOption": [Function],
      "isSelected": [Function],
      "text": Object {
        "text": "hello",
        "type": "plain_text",
      },
      "url": undefined,
      "value": "2",
    },
  ],
  "options": Array [
    Object {
      "description": undefined,
      "isOption": [Function],
      "isSelected": [Function],
      "text": Object {
        "text": "hey",
        "type": "plain_text",
      },
      "url": undefined,
      "value": "1",
    },
    Object {
      "description": undefined,
      "isOption": [Function],
      "isSelected": [Function],
      "text": Object {
        "text": "hello",
        "type": "plain_text",
      },
      "url": undefined,
      "value": "2",
    },
  ],
  "type": "checkboxes",
}
`;

exports[`Checkboxes Checkboxes with Url property in Options component renders Option component without Url property 1`] = `
Object {
  "action_id": "options",
  "confirm": undefined,
  "initial_options": undefined,
  "options": Array [
    Object {
      "description": undefined,
      "isOption": [Function],
      "isSelected": [Function],
      "text": Object {
        "text": "hey",
        "type": "plain_text",
      },
      "url": undefined,
      "value": "1",
    },
  ],
  "type": "checkboxes",
}
`;

exports[`Checkboxes Checkboxes with one option renders Checkboxes with one option 1`] = `
Object {
  "action_id": "options",
  "confirm": undefined,
  "initial_options": undefined,
  "options": Array [
    Object {
      "description": undefined,
      "isOption": [Function],
      "isSelected": [Function],
      "text": Object {
        "text": "hello",
        "type": "plain_text",
      },
      "url": undefined,
      "value": "1",
    },
  ],
  "type": "checkboxes",
}
`;

exports[`Checkboxes Checkboxes with one selected option renders Checkboxes with one selected option 1`] = `
Object {
  "action_id": "options",
  "confirm": undefined,
  "initial_options": Array [
    Object {
      "description": undefined,
      "isOption": [Function],
      "isSelected": [Function],
      "text": Object {
        "text": "hey",
        "type": "plain_text",
      },
      "url": undefined,
      "value": "1",
    },
  ],
  "options": Array [
    Object {
      "description": undefined,
      "isOption": [Function],
      "isSelected": [Function],
      "text": Object {
        "text": "hey",
        "type": "plain_text",
      },
      "url": undefined,
      "value": "1",
    },
    Object {
      "description": undefined,
      "isOption": [Function],
      "isSelected": [Function],
      "text": Object {
        "text": "hello",
        "type": "plain_text",
      },
      "url": undefined,
      "value": "2",
    },
  ],
  "type": "checkboxes",
}
`;

exports[`Checkboxes Checkboxes with two options renders Checkboxes with two options 1`] = `
Object {
  "action_id": "options",
  "confirm": undefined,
  "initial_options": undefined,
  "options": Array [
    Object {
      "description": undefined,
      "isOption": [Function],
      "isSelected": [Function],
      "text": Object {
        "text": "hey",
        "type": "plain_text",
      },
      "url": undefined,
      "value": "1",
    },
    Object {
      "description": undefined,
      "isOption": [Function],
      "isSelected": [Function],
      "text": Object {
        "text": "hello",
        "type": "plain_text",
      },
      "url": undefined,
      "value": "2",
    },
  ],
  "type": "checkboxes",
}
`;

exports[`Checkboxes Checkboxes with two selected options renders Checkboxes with two selected options 1`] = `
Object {
  "action_id": "options",
  "confirm": undefined,
  "initial_options": Array [
    Object {
      "description": undefined,
      "isOption": [Function],
      "isSelected": [Function],
      "text": Object {
        "text": "hey",
        "type": "plain_text",
      },
      "url": undefined,
      "value": "1",
    },
    Object {
      "description": undefined,
      "isOption": [Function],
      "isSelected": [Function],
      "text": Object {
        "text": "hello",
        "type": "plain_text",
      },
      "url": undefined,
      "value": "2",
    },
  ],
  "options": Array [
    Object {
      "description": undefined,
      "isOption": [Function],
      "isSelected": [Function],
      "text": Object {
        "text": "hey",
        "type": "plain_text",
      },
      "url": undefined,
      "value": "1",
    },
    Object {
      "description": undefined,
      "isOption": [Function],
      "isSelected": [Function],
      "text": Object {
        "text": "hello",
        "type": "plain_text",
      },
      "url": undefined,
      "value": "2",
    },
  ],
  "type": "checkboxes",
}
`;

exports[`Confirm Confirm with Text Component properties renders Confirm component with Text Component properties 1`] = `
Object {
  "confirm": Object {
    "emoji": true,
    "text": "Yes, I confirm!",
    "type": "plain_text",
  },
  "deny": Object {
    "emoji": true,
    "text": "No go away",
    "type": "plain_text",
  },
  "isConfirm": [Function],
  "style": undefined,
  "text": Object {
    "text": "*No go away*",
    "type": "mrkdwn",
    "verbatim": undefined,
  },
  "title": Object {
    "emoji": true,
    "text": "Confirm me?",
    "type": "plain_text",
  },
}
`;

exports[`Confirm Confirm with string properties renders with string properties 1`] = `
Object {
  "confirm": Object {
    "text": "Yes, I confirm!",
    "type": "plain_text",
  },
  "deny": Object {
    "text": "No, go away!",
    "type": "plain_text",
  },
  "isConfirm": [Function],
  "style": undefined,
  "text": Object {
    "text": "Do you confirm me?",
    "type": "plain_text",
  },
  "title": Object {
    "text": "Confirm me?",
    "type": "plain_text",
  },
}
`;

exports[`Context Context with Image and Text component renders Context with one element 1`] = `
Object {
  "elements": Array [
    Object {
      "alt_text": "an image",
      "image_url": "https://google.com/image.png",
      "type": "image",
    },
    Object {
      "text": "*Hello world*",
      "type": "mrkdwn",
      "verbatim": undefined,
    },
  ],
  "type": "context",
}
`;

exports[`Context Context with one element renders Context with one element 1`] = `
Object {
  "elements": Array [
    Object {
      "alt_text": "an image",
      "image_url": "https://google.com/image.png",
      "type": "image",
    },
  ],
  "type": "context",
}
`;

exports[`Conversations Select Menu Conversations Select Menu with a filter property renders a Conversations Select Menu with a filter property 1`] = `
Object {
  "action_id": "select",
  "confirm": undefined,
  "filter": Object {
    "exclude_bot_users": undefined,
    "exclude_external_shared_channels": true,
    "include": undefined,
  },
  "initial_conversation": "C12345",
  "onSearchOptions": undefined,
  "placeholder": Object {
    "text": "a placeholder",
    "type": "plain_text",
  },
  "type": "conversations_select",
}
`;

exports[`Conversations Select Menu Conversations Select Menu with initial conversation property renders a Conversations Select Menu with initial user property 1`] = `
Object {
  "action_id": "select",
  "confirm": undefined,
  "initial_conversation": "C12345",
  "onSearchOptions": undefined,
  "placeholder": Object {
    "text": "a placeholder",
    "type": "plain_text",
  },
  "type": "conversations_select",
}
`;

exports[`Conversations Select Menu Default Conversations Select Menu renders a default Conversations Select Menu 1`] = `
Object {
  "action_id": "select",
  "confirm": undefined,
  "initial_conversation": undefined,
  "onSearchOptions": undefined,
  "placeholder": Object {
    "text": "a placeholder",
    "type": "plain_text",
  },
  "type": "conversations_select",
}
`;

exports[`DatePicker DatePicker with Text component placeholder property renders DatePicker with Text component placeholder property 1`] = `
Object {
  "action_id": "date",
  "confirm": undefined,
  "initial_date": "2020-11-11",
  "placeholder": Object {
    "emoji": true,
    "text": "just a placeholder",
    "type": "plain_text",
  },
  "type": "datepicker",
}
`;

exports[`DatePicker DatePicker with confirm property renders DatePicker with confirm property 1`] = `
Object {
  "action_id": "date",
  "confirm": Object {
    "confirm": Object {
      "text": "Yes, I confirm!",
      "type": "plain_text",
    },
    "deny": Object {
      "text": "No, go away!",
      "type": "plain_text",
    },
    "isConfirm": [Function],
    "style": undefined,
    "text": Object {
      "text": "Do you confirm me?",
      "type": "plain_text",
    },
    "title": Object {
      "text": "Confirm me?",
      "type": "plain_text",
    },
  },
  "initial_date": "2020-11-11",
  "placeholder": Object {
    "emoji": true,
    "text": "just a placeholder",
    "type": "plain_text",
  },
  "type": "datepicker",
}
`;

exports[`DatePicker DatePicker with initial date property renders DatePicker with initial date property 1`] = `
Object {
  "action_id": "date",
  "confirm": undefined,
  "initial_date": "2020-11-11",
  "placeholder": undefined,
  "type": "datepicker",
}
`;

exports[`DatePicker DatePicker with string placeholder property renders DatePicker with string placeholder property 1`] = `
Object {
  "action_id": "date",
  "confirm": undefined,
  "initial_date": "2020-11-11",
  "placeholder": Object {
    "text": "just a placeholder",
    "type": "plain_text",
  },
  "type": "datepicker",
}
`;

exports[`DatePicker Default DatePicker renders default DatePicker 1`] = `
Object {
  "action_id": "date",
  "confirm": undefined,
  "initial_date": undefined,
  "placeholder": undefined,
  "type": "datepicker",
}
`;

exports[`Divider Default Divider renders Divider 1`] = `
Object {
  "type": "divider",
}
`;

exports[`External Select Menu Default External Select Menu renders a default External Select Menu 1`] = `
Object {
  "action_id": "select",
  "confirm": undefined,
  "min_query_length": 100,
  "onSearchOptions": [Function],
  "placeholder": Object {
    "text": "a placeholder",
    "type": "plain_text",
  },
  "type": "external_select",
}
`;

exports[`Image Block Default Image Block renders Image Block with image_url and alt_text properties 1`] = `
Object {
  "alt_text": "an image",
  "image_url": "https://google.com/image.png",
  "type": "image",
}
`;

exports[`Image Block Image Block with emoji property renders Image Block with title 1`] = `
Object {
  "alt_text": "an image",
  "image_url": "https://google.com/image.png",
  "title": Object {
    "emoji": true,
    "text": "a string",
    "type": "plain_text",
  },
  "type": "image",
}
`;

exports[`Image Block Image Block with string title renders Image Block with title 1`] = `
Object {
  "alt_text": "an image",
  "image_url": "https://google.com/image.png",
  "title": Object {
    "emoji": undefined,
    "text": "a string",
    "type": "plain_text",
  },
  "type": "image",
}
`;

exports[`Image Default Image renders Image with image_url and alt_text properties 1`] = `
Object {
  "alt_text": "an image",
  "image_url": "https://google.com/image.png",
  "type": "image",
}
`;

exports[`Input Input with DatePicker element renders Input with DatePicker element 1`] = `
Object {
  "element": Object {
    "action_id": "date",
    "confirm": undefined,
    "initial_date": undefined,
    "placeholder": undefined,
    "type": "datepicker",
  },
  "hint": undefined,
  "label": Object {
    "text": "Expiration date",
    "type": "plain_text",
  },
  "optional": undefined,
  "type": "input",
}
`;

exports[`Input Input with hint Text component renders Input with hint Text component 1`] = `
Object {
  "element": Object {
    "action_id": "date",
    "confirm": undefined,
    "initial_date": undefined,
    "placeholder": undefined,
    "type": "datepicker",
  },
  "hint": Object {
    "emoji": true,
    "text": "hint",
    "type": "plain_text",
  },
  "label": Object {
    "text": "label",
    "type": "plain_text",
  },
  "optional": undefined,
  "type": "input",
}
`;

exports[`Input Input with hint Text component renders Input with hint Text component 2`] = `
Object {
  "element": Object {
    "action_id": "date",
    "confirm": undefined,
    "initial_date": undefined,
    "placeholder": undefined,
    "type": "datepicker",
  },
  "hint": Object {
    "emoji": true,
    "text": "hint",
    "type": "plain_text",
  },
  "label": Object {
    "text": "label",
    "type": "plain_text",
  },
  "optional": undefined,
  "type": "input",
}
`;

exports[`Input Input with label Text component renders Input with label Text component 1`] = `
Object {
  "element": Object {
    "action_id": "date",
    "confirm": undefined,
    "initial_date": undefined,
    "placeholder": undefined,
    "type": "datepicker",
  },
  "hint": undefined,
  "label": Object {
    "emoji": true,
    "text": "Label",
    "type": "plain_text",
  },
  "optional": undefined,
  "type": "input",
}
`;

exports[`Input Input with label string renders Input with label string 1`] = `
Object {
  "element": Object {
    "action_id": "date",
    "confirm": undefined,
    "initial_date": undefined,
    "placeholder": undefined,
    "type": "datepicker",
  },
  "hint": undefined,
  "label": Object {
    "text": "Expiration date",
    "type": "plain_text",
  },
  "optional": undefined,
  "type": "input",
}
`;

exports[`Input Input with optional property renders Input with optional property 1`] = `
Object {
  "element": Object {
    "action_id": "date",
    "confirm": undefined,
    "initial_date": undefined,
    "placeholder": undefined,
    "type": "datepicker",
  },
  "hint": Object {
    "emoji": true,
    "text": "hint",
    "type": "plain_text",
  },
  "label": Object {
    "text": "label",
    "type": "plain_text",
  },
  "optional": true,
  "type": "input",
}
`;

exports[`Multi Channel Select Menu Default Multi Channel Select Menu renders a default Multi Channel Select Menu 1`] = `
Object {
  "action_id": "select",
  "confirm": undefined,
  "initial_channels": undefined,
  "max_selected_items": undefined,
  "onSearchOptions": undefined,
  "placeholder": Object {
    "text": "a placeholder",
    "type": "plain_text",
  },
  "type": "multi_channels_select",
}
`;

exports[`Multi Channel Select Menu Multi Channel Select Menu with initial channel property renders a Multi Channel Select Menu with initial channel property 1`] = `
Object {
  "action_id": "select",
  "confirm": undefined,
  "initial_channels": Array [
    "C12345",
  ],
  "max_selected_items": undefined,
  "onSearchOptions": undefined,
  "placeholder": Object {
    "text": "a placeholder",
    "type": "plain_text",
  },
  "type": "multi_channels_select",
}
`;

exports[`Multi Conversations Select Menu Default Multi Conversations Select Menu renders a default Conversations Select Menu 1`] = `
Object {
  "action_id": "select",
  "confirm": undefined,
  "initial_conversations": undefined,
  "max_selected_items": undefined,
  "onSearchOptions": undefined,
  "placeholder": Object {
    "text": "a placeholder",
    "type": "plain_text",
  },
  "type": "multi_conversations_select",
}
`;

exports[`Multi Conversations Select Menu Multi Conversations Select Menu with a filter property renders a Conversations Select Menu with a filter property 1`] = `
Object {
  "action_id": "select",
  "confirm": undefined,
  "filter": Object {
    "exclude_bot_users": undefined,
    "exclude_external_shared_channels": true,
    "include": undefined,
  },
  "initial_conversations": Array [
    "C12345",
  ],
  "max_selected_items": undefined,
  "onSearchOptions": undefined,
  "placeholder": Object {
    "text": "a placeholder",
    "type": "plain_text",
  },
  "type": "multi_conversations_select",
}
`;

exports[`Multi Conversations Select Menu Multi Conversations Select Menu with initial conversation property renders a Multi Conversations Select Menu with initial user property 1`] = `
Object {
  "action_id": "select",
  "confirm": undefined,
  "initial_conversations": Array [
    "C12345",
  ],
  "max_selected_items": undefined,
  "onSearchOptions": undefined,
  "placeholder": Object {
    "text": "a placeholder",
    "type": "plain_text",
  },
  "type": "multi_conversations_select",
}
`;

exports[`Multi External Select Menu Default Multi External Select Menu renders a default Multi External Select Menu 1`] = `
Object {
  "action_id": "select",
  "confirm": undefined,
  "initial_options": undefined,
  "max_selected_items": undefined,
  "min_query_length": 100,
  "onSearchOptions": [Function],
  "placeholder": Object {
    "text": "a placeholder",
    "type": "plain_text",
  },
  "type": "multi_external_select",
}
`;

exports[`Multi Static Select Menu Multi Static Select Menu with diverse option group renders a Multi Static Select Menu with diverse option group 1`] = `
Object {
  "action_id": "select",
  "confirm": undefined,
  "initial_options": Array [
    Object {
      "description": undefined,
      "isOption": [Function],
      "isSelected": [Function],
      "text": Object {
        "text": "option a",
        "type": "plain_text",
      },
      "url": undefined,
      "value": "option-a",
    },
    Object {
      "description": undefined,
      "isOption": [Function],
      "isSelected": [Function],
      "text": Object {
        "text": "option b",
        "type": "plain_text",
      },
      "url": undefined,
      "value": "option-b",
    },
  ],
  "max_selected_items": 10,
  "onSearchOptions": undefined,
  "option_groups": Array [
    Object {
      "isOptionGroup": [Function],
      "label": Object {
        "text": "an option group",
        "type": "plain_text",
      },
      "options": Array [
        Object {
          "description": undefined,
          "isOption": [Function],
          "isSelected": [Function],
          "text": Object {
            "text": "option a",
            "type": "plain_text",
          },
          "url": undefined,
          "value": "option-a",
        },
        Object {
          "description": undefined,
          "isOption": [Function],
          "isSelected": [Function],
          "text": Object {
            "text": "option b",
            "type": "plain_text",
          },
          "url": undefined,
          "value": "option-b",
        },
        Object {
          "description": undefined,
          "isOption": [Function],
          "isSelected": [Function],
          "text": Object {
            "text": "option b",
            "type": "plain_text",
          },
          "url": undefined,
          "value": "option-b",
        },
        Object {
          "description": undefined,
          "isOption": [Function],
          "isSelected": [Function],
          "text": Object {
            "text": "option c",
            "type": "plain_text",
          },
          "url": undefined,
          "value": "option-c",
        },
      ],
    },
  ],
  "placeholder": Object {
    "text": "a placeholder",
    "type": "plain_text",
  },
  "type": "multi_static_select",
}
`;

exports[`Multi Static Select Menu Multi Static Select Menu with one option group renders a Multi Static Select Menu with one option group 1`] = `
Object {
  "action_id": "select",
  "confirm": undefined,
  "max_selected_items": undefined,
  "onSearchOptions": undefined,
  "option_groups": Array [
    Object {
      "isOptionGroup": [Function],
      "label": Object {
        "text": "group",
        "type": "plain_text",
      },
      "options": Array [
        Object {
          "description": undefined,
          "isOption": [Function],
          "isSelected": [Function],
          "text": Object {
            "text": "Option 1",
            "type": "plain_text",
          },
          "url": undefined,
          "value": "1",
        },
      ],
    },
  ],
  "placeholder": Object {
    "text": "a placeholder",
    "type": "plain_text",
  },
  "type": "multi_static_select",
}
`;

exports[`Multi Static Select Menu Multi Static Select Menu with one option renders a Multi Static Select Menu with one option 1`] = `
Object {
  "action_id": "select",
  "confirm": undefined,
  "max_selected_items": undefined,
  "onSearchOptions": undefined,
  "options": Array [
    Object {
      "description": undefined,
      "isOption": [Function],
      "isSelected": [Function],
      "text": Object {
        "text": "Option 1",
        "type": "plain_text",
      },
      "url": undefined,
      "value": "1",
    },
  ],
  "placeholder": Object {
    "text": "a placeholder",
    "type": "plain_text",
  },
  "type": "multi_static_select",
}
`;

exports[`Multi Static Select Menu Multi Static Select Menu with selected option group renders a Multi Static Select Menu with selected option group 1`] = `
Object {
  "action_id": "select",
  "confirm": undefined,
  "initial_options": Array [
    Object {
      "description": undefined,
      "isOption": [Function],
      "isSelected": [Function],
      "text": Object {
        "text": "Option 2",
        "type": "plain_text",
      },
      "url": undefined,
      "value": "2",
    },
  ],
  "max_selected_items": 10,
  "onSearchOptions": undefined,
  "option_groups": Array [
    Object {
      "isOptionGroup": [Function],
      "label": Object {
        "text": "group 1",
        "type": "plain_text",
      },
      "options": Array [
        Object {
          "description": undefined,
          "isOption": [Function],
          "isSelected": [Function],
          "text": Object {
            "text": "Option 1",
            "type": "plain_text",
          },
          "url": undefined,
          "value": "1",
        },
      ],
    },
    Object {
      "isOptionGroup": [Function],
      "label": Object {
        "text": "group 2",
        "type": "plain_text",
      },
      "options": Array [
        Object {
          "description": undefined,
          "isOption": [Function],
          "isSelected": [Function],
          "text": Object {
            "text": "Option 2",
            "type": "plain_text",
          },
          "url": undefined,
          "value": "2",
        },
      ],
    },
  ],
  "placeholder": Object {
    "text": "a placeholder",
    "type": "plain_text",
  },
  "type": "multi_static_select",
}
`;

exports[`Multi Static Select Menu Multi Static Select Menu with selected option renders a Multi Static Select Menu with selected option 1`] = `
Object {
  "action_id": "select",
  "confirm": undefined,
  "initial_options": Array [
    Object {
      "description": undefined,
      "isOption": [Function],
      "isSelected": [Function],
      "text": Object {
        "text": "Option 2",
        "type": "plain_text",
      },
      "url": undefined,
      "value": "2",
    },
  ],
  "max_selected_items": undefined,
  "onSearchOptions": undefined,
  "options": Array [
    Object {
      "description": undefined,
      "isOption": [Function],
      "isSelected": [Function],
      "text": Object {
        "text": "Option 1",
        "type": "plain_text",
      },
      "url": undefined,
      "value": "1",
    },
    Object {
      "description": undefined,
      "isOption": [Function],
      "isSelected": [Function],
      "text": Object {
        "text": "Option 2",
        "type": "plain_text",
      },
      "url": undefined,
      "value": "2",
    },
  ],
  "placeholder": Object {
    "text": "a placeholder",
    "type": "plain_text",
  },
  "type": "multi_static_select",
}
`;

exports[`Multi Static Select Menu Multi Static Select Menu with two option groups renders a Static Select Menu with two option groups 1`] = `
Object {
  "action_id": "select",
  "confirm": undefined,
  "max_selected_items": undefined,
  "onSearchOptions": undefined,
  "option_groups": Array [
    Object {
      "isOptionGroup": [Function],
      "label": Object {
        "text": "group 1",
        "type": "plain_text",
      },
      "options": Array [
        Object {
          "description": undefined,
          "isOption": [Function],
          "isSelected": [Function],
          "text": Object {
            "text": "Option 1",
            "type": "plain_text",
          },
          "url": undefined,
          "value": "1",
        },
      ],
    },
    Object {
      "isOptionGroup": [Function],
      "label": Object {
        "text": "group 2",
        "type": "plain_text",
      },
      "options": Array [
        Object {
          "description": undefined,
          "isOption": [Function],
          "isSelected": [Function],
          "text": Object {
            "text": "Option 2",
            "type": "plain_text",
          },
          "url": undefined,
          "value": "2",
        },
      ],
    },
  ],
  "placeholder": Object {
    "text": "a placeholder",
    "type": "plain_text",
  },
  "type": "multi_static_select",
}
`;

exports[`Multi Static Select Menu Multi Static Select Menu with two options renders a Multi Static Select Menu with two options 1`] = `
Object {
  "action_id": "select",
  "confirm": undefined,
  "max_selected_items": undefined,
  "onSearchOptions": undefined,
  "options": Array [
    Object {
      "description": undefined,
      "isOption": [Function],
      "isSelected": [Function],
      "text": Object {
        "text": "Option 1",
        "type": "plain_text",
      },
      "url": undefined,
      "value": "1",
    },
    Object {
      "description": undefined,
      "isOption": [Function],
      "isSelected": [Function],
      "text": Object {
        "text": "Option 2",
        "type": "plain_text",
      },
      "url": undefined,
      "value": "2",
    },
  ],
  "placeholder": Object {
    "text": "a placeholder",
    "type": "plain_text",
  },
  "type": "multi_static_select",
}
`;

exports[`Multi User Select Menu Default Multi User Select Menu renders a default Multi User Select Menu 1`] = `
Object {
  "action_id": "select",
  "confirm": undefined,
  "initial_users": undefined,
  "max_selected_items": undefined,
  "onSearchOptions": undefined,
  "placeholder": Object {
    "text": "a placeholder",
    "type": "plain_text",
  },
  "type": "multi_users_select",
}
`;

exports[`Multi User Select Menu Multi User Select Menu with initial user property renders a Multi User Select Menu with initial user property 1`] = `
Object {
  "action_id": "select",
  "confirm": undefined,
  "initial_users": Array [
    "U12345",
  ],
  "max_selected_items": undefined,
  "onSearchOptions": undefined,
  "placeholder": Object {
    "text": "a placeholder",
    "type": "plain_text",
  },
  "type": "multi_users_select",
}
`;

exports[`Option Group Option Group with Url Option renders an Option Group without a Url Option 1`] = `
Object {
  "isOptionGroup": [Function],
  "label": Object {
    "text": "option group",
    "type": "plain_text",
  },
  "options": Array [
    Object {
      "description": undefined,
      "isOption": [Function],
      "isSelected": [Function],
      "text": Object {
        "text": "Option 1",
        "type": "plain_text",
      },
      "url": undefined,
      "value": "1",
    },
    Object {
      "description": undefined,
      "isOption": [Function],
      "isSelected": [Function],
      "text": Object {
        "text": "Option 2",
        "type": "plain_text",
      },
      "url": undefined,
      "value": "2",
    },
  ],
}
`;

exports[`Option Group Option Group with a single Option renders an Option Group with a single Option 1`] = `
Object {
  "isOptionGroup": [Function],
  "label": Object {
    "text": "option group",
    "type": "plain_text",
  },
  "options": Array [
    Object {
      "description": undefined,
      "isOption": [Function],
      "isSelected": [Function],
      "text": Object {
        "text": "Option 1",
        "type": "plain_text",
      },
      "url": undefined,
      "value": "1",
    },
  ],
}
`;

exports[`Option Group Option Group with two Options renders an Option Group with two Options 1`] = `
Object {
  "isOptionGroup": [Function],
  "label": Object {
    "text": "option group",
    "type": "plain_text",
  },
  "options": Array [
    Object {
      "description": undefined,
      "isOption": [Function],
      "isSelected": [Function],
      "text": Object {
        "text": "Option 1",
        "type": "plain_text",
      },
      "url": undefined,
      "value": "1",
    },
    Object {
      "description": undefined,
      "isOption": [Function],
      "isSelected": [Function],
      "text": Object {
        "text": "Option 2",
        "type": "plain_text",
      },
      "url": undefined,
      "value": "2",
    },
  ],
}
`;

exports[`Option Option with Text child renders Option with Text child 1`] = `
Object {
  "description": undefined,
  "isOption": [Function],
  "isSelected": [Function],
  "text": Object {
    "emoji": true,
    "text": "Another option",
    "type": "plain_text",
  },
  "url": undefined,
  "value": "an option",
}
`;

exports[`Option Option with description Text property renders Option with description Text property 1`] = `
Object {
  "description": Object {
    "emoji": true,
    "text": "hello i am a description",
    "type": "plain_text",
  },
  "isOption": [Function],
  "isSelected": [Function],
  "text": Object {
    "emoji": true,
    "text": "Another option",
    "type": "plain_text",
  },
  "url": "https://google.com",
  "value": "an option",
}
`;

exports[`Option Option with description string property renders Option with description string property 1`] = `
Object {
  "description": Object {
    "text": "hello i am a description",
    "type": "plain_text",
  },
  "isOption": [Function],
  "isSelected": [Function],
  "text": Object {
    "emoji": true,
    "text": "Another option",
    "type": "plain_text",
  },
  "url": "https://google.com",
  "value": "an option",
}
`;

exports[`Option Option with string child renders Option with string child 1`] = `
Object {
  "description": undefined,
  "isOption": [Function],
  "isSelected": [Function],
  "text": Object {
    "text": "I am an option",
    "type": "plain_text",
  },
  "url": undefined,
  "value": "an option",
}
`;

exports[`Option Option with url property renders Option with url property 1`] = `
Object {
  "description": undefined,
  "isOption": [Function],
  "isSelected": [Function],
  "text": Object {
    "emoji": true,
    "text": "Another option",
    "type": "plain_text",
  },
  "url": "https://google.com",
  "value": "an option",
}
`;

exports[`Overflow Menu Overflow Menu with a Url options renders an Overflow menu with a Url option 1`] = `
Object {
  "action_id": "overflow",
  "confirm": undefined,
  "options": Array [
    Object {
      "description": undefined,
      "isOption": [Function],
      "isSelected": [Function],
      "text": Object {
        "text": "Dogs",
        "type": "plain_text",
      },
      "url": "google.com",
      "value": "dogs",
    },
  ],
  "type": "overflow",
}
`;

exports[`Overflow Menu Overflow Menu with a single option renders an Overflow menu with a single option 1`] = `
Object {
  "action_id": "overflow",
  "confirm": undefined,
  "options": Array [
    Object {
      "description": undefined,
      "isOption": [Function],
      "isSelected": [Function],
      "text": Object {
        "text": "Dogs",
        "type": "plain_text",
      },
      "url": undefined,
      "value": "dogs",
    },
  ],
  "type": "overflow",
}
`;

exports[`Overflow Menu Overflow Menu with two options renders an Overflow menu with a two options 1`] = `
Object {
  "action_id": "overflow",
  "confirm": undefined,
  "options": Array [
    Object {
      "description": undefined,
      "isOption": [Function],
      "isSelected": [Function],
      "text": Object {
        "text": "Dogs",
        "type": "plain_text",
      },
      "url": undefined,
      "value": "dogs",
    },
    Object {
      "description": undefined,
      "isOption": [Function],
      "isSelected": [Function],
      "text": Object {
        "text": "Cats",
        "type": "plain_text",
      },
      "url": undefined,
      "value": "cats",
    },
  ],
  "type": "overflow",
}
`;

exports[`Radio Buttons Radio Buttons with a Url options renders an Radio Buttons without a Url property 1`] = `
Object {
  "action_id": "overflow",
  "confirm": undefined,
  "initial_option": undefined,
  "options": Array [
    Object {
      "description": undefined,
      "isOption": [Function],
      "isSelected": [Function],
      "text": Object {
        "text": "Dogs",
        "type": "plain_text",
      },
      "url": undefined,
      "value": "dogs",
    },
  ],
  "type": "radio_buttons",
}
`;

exports[`Radio Buttons Radio Buttons with a single option renders an Radio Buttons with a single option 1`] = `
Object {
  "action_id": "overflow",
  "confirm": undefined,
  "initial_option": undefined,
  "options": Array [
    Object {
      "description": undefined,
      "isOption": [Function],
      "isSelected": [Function],
      "text": Object {
        "text": "Dogs",
        "type": "plain_text",
      },
      "url": undefined,
      "value": "dogs",
    },
  ],
  "type": "radio_buttons",
}
`;

exports[`Radio Buttons Radio Buttons with selected option renders an Radio Buttons with a selected option 1`] = `
Object {
  "action_id": "overflow",
  "confirm": undefined,
  "initial_option": Object {
    "description": undefined,
    "isOption": [Function],
    "isSelected": [Function],
    "text": Object {
      "text": "Cats",
      "type": "plain_text",
    },
    "url": undefined,
    "value": "cats",
  },
  "options": Array [
    Object {
      "description": undefined,
      "isOption": [Function],
      "isSelected": [Function],
      "text": Object {
        "text": "Dogs",
        "type": "plain_text",
      },
      "url": undefined,
      "value": "dogs",
    },
    Object {
      "description": undefined,
      "isOption": [Function],
      "isSelected": [Function],
      "text": Object {
        "text": "Cats",
        "type": "plain_text",
      },
      "url": undefined,
      "value": "cats",
    },
  ],
  "type": "radio_buttons",
}
`;

exports[`Radio Buttons Radio Buttons with two options renders an Radio Buttons with a two options 1`] = `
Object {
  "action_id": "overflow",
  "confirm": undefined,
  "initial_option": undefined,
  "options": Array [
    Object {
      "description": undefined,
      "isOption": [Function],
      "isSelected": [Function],
      "text": Object {
        "text": "Dogs",
        "type": "plain_text",
      },
      "url": undefined,
      "value": "dogs",
    },
    Object {
      "description": undefined,
      "isOption": [Function],
      "isSelected": [Function],
      "text": Object {
        "text": "Cats",
        "type": "plain_text",
      },
      "url": undefined,
      "value": "cats",
    },
  ],
  "type": "radio_buttons",
}
`;

exports[`Section Section with Button accessory renders Section with a Button accessory 1`] = `
Object {
  "accessory": Object {
    "action_id": "click",
    "confirm": undefined,
    "style": undefined,
    "text": Object {
      "emoji": undefined,
      "text": "Click me",
      "type": "plain_text",
    },
    "type": "button",
    "url": undefined,
  },
  "text": Object {
    "emoji": undefined,
    "text": "Hello world",
    "type": "plain_text",
  },
  "type": "section",
}
`;

exports[`Section Section with Button accessory, Text, and Fields renders Section with a Button accessory, Text, and fields 1`] = `
Object {
  "accessory": Object {
    "action_id": undefined,
    "confirm": undefined,
    "style": undefined,
    "text": Object {
      "emoji": undefined,
      "text": "Click me",
      "type": "plain_text",
    },
    "type": "button",
    "url": undefined,
  },
  "fields": Array [
    Object {
      "emoji": undefined,
      "text": "Field #1",
      "type": "plain_text",
    },
    Object {
      "emoji": undefined,
      "text": "Field #2",
      "type": "plain_text",
    },
  ],
  "text": Object {
    "emoji": undefined,
    "text": "The text",
    "type": "plain_text",
  },
  "type": "section",
}
`;

exports[`Section Section with Image accessory renders Section with a Image accessory 1`] = `
Object {
  "accessory": Object {
    "alt_text": "an image",
    "image_url": "https://google.com/image.png",
    "type": "image",
  },
  "text": Object {
    "emoji": undefined,
    "text": "Hello world",
    "type": "plain_text",
  },
  "type": "section",
}
`;

exports[`Section Section with a multi-child Text component renders Section with a multi-child Text component 1`] = `
Object {
  "accessory": undefined,
  "fields": Array [
    Object {
      "emoji": undefined,
      "text": "First text",
      "type": "plain_text",
    },
  ],
  "text": undefined,
  "type": "section",
}
`;

exports[`Section Section with a text property and no children renders Section with a text property and empty fields 1`] = `
Object {
  "accessory": undefined,
  "text": Object {
    "emoji": undefined,
    "text": "Hello world",
    "type": "plain_text",
  },
  "type": "section",
}
`;

exports[`Section Section with one Text component renders Section with child Text component in the fields property 1`] = `
Object {
  "accessory": undefined,
  "fields": Array [
    Object {
      "emoji": undefined,
      "text": "First text",
      "type": "plain_text",
    },
  ],
  "text": undefined,
  "type": "section",
}
`;

exports[`Section Section with string Text property renders Section with child Text component in the fields property 1`] = `
Object {
  "accessory": undefined,
  "text": Object {
    "text": "some text",
    "type": "plain_text",
  },
  "type": "section",
}
`;

exports[`Section Section with two Text components renders Section with child Text components in the fields property 1`] = `
Object {
  "accessory": undefined,
  "fields": Array [
    Object {
      "emoji": undefined,
      "text": "First text",
      "type": "plain_text",
    },
    Object {
      "emoji": undefined,
      "text": "First text",
      "type": "plain_text",
    },
  ],
  "text": undefined,
  "type": "section",
}
`;

exports[`Static Select Menu Static Select Menu with one option group renders a Static Select Menu with one option group 1`] = `
Object {
  "action_id": "select",
  "confirm": undefined,
  "initial_option": undefined,
  "onSearchOptions": undefined,
  "option_groups": Array [
    Object {
      "isOptionGroup": [Function],
      "label": Object {
        "text": "group",
        "type": "plain_text",
      },
      "options": Array [
        Object {
          "description": undefined,
          "isOption": [Function],
          "isSelected": [Function],
          "text": Object {
            "text": "Option 1",
            "type": "plain_text",
          },
          "url": undefined,
          "value": "1",
        },
      ],
    },
  ],
  "placeholder": Object {
    "text": "a placeholder",
    "type": "plain_text",
  },
  "type": "static_select",
}
`;

exports[`Static Select Menu Static Select Menu with one option renders a Static Select Menu with one option 1`] = `
Object {
  "action_id": "select",
  "confirm": undefined,
  "initial_option": undefined,
  "onSearchOptions": undefined,
  "options": Array [
    Object {
      "description": undefined,
      "isOption": [Function],
      "isSelected": [Function],
      "text": Object {
        "text": "Option 1",
        "type": "plain_text",
      },
      "url": undefined,
      "value": "1",
    },
  ],
  "placeholder": Object {
    "text": "a placeholder",
    "type": "plain_text",
  },
  "type": "static_select",
}
`;

exports[`Static Select Menu Static Select Menu with selected option group renders a Static Select Menu with selected option group 1`] = `
Object {
  "action_id": "select",
  "confirm": undefined,
  "initial_option": Object {
    "description": undefined,
    "isOption": [Function],
    "isSelected": [Function],
    "text": Object {
      "text": "Option 2",
      "type": "plain_text",
    },
    "url": undefined,
    "value": "2",
  },
  "onSearchOptions": undefined,
  "option_groups": Array [
    Object {
      "isOptionGroup": [Function],
      "label": Object {
        "text": "group 1",
        "type": "plain_text",
      },
      "options": Array [
        Object {
          "description": undefined,
          "isOption": [Function],
          "isSelected": [Function],
          "text": Object {
            "text": "Option 1",
            "type": "plain_text",
          },
          "url": undefined,
          "value": "1",
        },
      ],
    },
    Object {
      "isOptionGroup": [Function],
      "label": Object {
        "text": "group 2",
        "type": "plain_text",
      },
      "options": Array [
        Object {
          "description": undefined,
          "isOption": [Function],
          "isSelected": [Function],
          "text": Object {
            "text": "Option 2",
            "type": "plain_text",
          },
          "url": undefined,
          "value": "2",
        },
      ],
    },
  ],
  "placeholder": Object {
    "text": "a placeholder",
    "type": "plain_text",
  },
  "type": "static_select",
}
`;

exports[`Static Select Menu Static Select Menu with selected option renders a Static Select Menu with selected option 1`] = `
Object {
  "action_id": "select",
  "confirm": undefined,
  "initial_option": Object {
    "description": undefined,
    "isOption": [Function],
    "isSelected": [Function],
    "text": Object {
      "text": "Option 2",
      "type": "plain_text",
    },
    "url": undefined,
    "value": "2",
  },
  "onSearchOptions": undefined,
  "options": Array [
    Object {
      "description": undefined,
      "isOption": [Function],
      "isSelected": [Function],
      "text": Object {
        "text": "Option 1",
        "type": "plain_text",
      },
      "url": undefined,
      "value": "1",
    },
    Object {
      "description": undefined,
      "isOption": [Function],
      "isSelected": [Function],
      "text": Object {
        "text": "Option 2",
        "type": "plain_text",
      },
      "url": undefined,
      "value": "2",
    },
  ],
  "placeholder": Object {
    "text": "a placeholder",
    "type": "plain_text",
  },
  "type": "static_select",
}
`;

exports[`Static Select Menu Static Select Menu with two option groups renders a Static Select Menu with two option groups 1`] = `
Object {
  "action_id": "select",
  "confirm": undefined,
  "initial_option": undefined,
  "onSearchOptions": undefined,
  "option_groups": Array [
    Object {
      "isOptionGroup": [Function],
      "label": Object {
        "text": "group 1",
        "type": "plain_text",
      },
      "options": Array [
        Object {
          "description": undefined,
          "isOption": [Function],
          "isSelected": [Function],
          "text": Object {
            "text": "Option 1",
            "type": "plain_text",
          },
          "url": undefined,
          "value": "1",
        },
      ],
    },
    Object {
      "isOptionGroup": [Function],
      "label": Object {
        "text": "group 2",
        "type": "plain_text",
      },
      "options": Array [
        Object {
          "description": undefined,
          "isOption": [Function],
          "isSelected": [Function],
          "text": Object {
            "text": "Option 2",
            "type": "plain_text",
          },
          "url": undefined,
          "value": "2",
        },
      ],
    },
  ],
  "placeholder": Object {
    "text": "a placeholder",
    "type": "plain_text",
  },
  "type": "static_select",
}
`;

exports[`Static Select Menu Static Select Menu with two options renders a Static Select Menu with two options 1`] = `
Object {
  "action_id": "select",
  "confirm": undefined,
  "initial_option": undefined,
  "onSearchOptions": undefined,
  "options": Array [
    Object {
      "description": undefined,
      "isOption": [Function],
      "isSelected": [Function],
      "text": Object {
        "text": "Option 1",
        "type": "plain_text",
      },
      "url": undefined,
      "value": "1",
    },
    Object {
      "description": undefined,
      "isOption": [Function],
      "isSelected": [Function],
      "text": Object {
        "text": "Option 2",
        "type": "plain_text",
      },
      "url": undefined,
      "value": "2",
    },
  ],
  "placeholder": Object {
    "text": "a placeholder",
    "type": "plain_text",
  },
  "type": "static_select",
}
`;

exports[`Text Default Text renders plain_text Text without emoji 1`] = `
Object {
  "emoji": undefined,
  "text": "hello world",
  "type": "plain_text",
}
`;

exports[`Text Text with emoji renders plain_text Text with emoji 1`] = `
Object {
  "emoji": true,
  "text": "hello world",
  "type": "plain_text",
}
`;

exports[`Text Text with mrkdwn and verbatim property renders mrkdwn Text with verbatim 1`] = `
Object {
  "text": "hello world",
  "type": "mrkdwn",
  "verbatim": true,
}
`;

exports[`Text Text with mrkdwn property renders mrkdwn Text without verbatim 1`] = `
Object {
  "text": "hello world",
  "type": "mrkdwn",
  "verbatim": undefined,
}
`;

exports[`Text Text with two children renders Text with children concatenated 1`] = `
Object {
  "emoji": undefined,
  "text": "hello world",
  "type": "plain_text",
}
`;

exports[`TextField TextField with Text component placeholder renders TextField with Text component placeholder 1`] = `
Object {
  "action_id": "text",
  "initial_value": "hey there",
  "max_length": undefined,
  "min_length": 7,
  "multiline": true,
  "placeholder": Object {
    "emoji": true,
    "text": "I'm a placeholder",
    "type": "plain_text",
  },
  "type": "plain_text_input",
}
`;

exports[`TextField TextField with action renders TextField with action 1`] = `
Object {
  "action_id": "text",
  "initial_value": undefined,
  "max_length": undefined,
  "min_length": undefined,
  "multiline": undefined,
  "placeholder": undefined,
  "type": "plain_text_input",
}
`;

exports[`TextField TextField with initial value renders TextField with initial value 1`] = `
Object {
  "action_id": "text",
  "initial_value": "hey there",
  "max_length": undefined,
  "min_length": undefined,
  "multiline": undefined,
  "placeholder": undefined,
  "type": "plain_text_input",
}
`;

exports[`TextField TextField with maxLength property renders TextField with maxLength property 1`] = `
Object {
  "action_id": "text",
  "initial_value": "hey there",
  "max_length": 10,
  "min_length": undefined,
  "multiline": undefined,
  "placeholder": undefined,
  "type": "plain_text_input",
}
`;

exports[`TextField TextField with minLength property renders TextField with minLength property 1`] = `
Object {
  "action_id": "text",
  "initial_value": "hey there",
  "max_length": undefined,
  "min_length": 7,
  "multiline": undefined,
  "placeholder": undefined,
  "type": "plain_text_input",
}
`;

exports[`TextField TextField with multiline property set renders TextField with multiline property set 1`] = `
Object {
  "action_id": "text",
  "initial_value": "hey there",
  "max_length": undefined,
  "min_length": 7,
  "multiline": true,
  "placeholder": undefined,
  "type": "plain_text_input",
}
`;

exports[`TextField TextField with string placeholder renders TextField with string placeholder 1`] = `
Object {
  "action_id": "text",
  "initial_value": "hey there",
  "max_length": undefined,
  "min_length": 7,
  "multiline": true,
  "placeholder": Object {
    "text": "i am a placeholder",
    "type": "plain_text",
  },
  "type": "plain_text_input",
}
`;

exports[`User Select Menu Default User Select Menu renders a default User Select Menu 1`] = `
Object {
  "action_id": "select",
  "confirm": undefined,
  "initial_user": undefined,
  "onSearchOptions": undefined,
  "placeholder": Object {
    "text": "a placeholder",
    "type": "plain_text",
  },
  "type": "users_select",
}
`;

exports[`User Select Menu User Select Menu with initial user property renders a User Select Menu with initial user property 1`] = `
Object {
  "action_id": "select",
  "confirm": undefined,
  "initial_user": "U12345",
  "onSearchOptions": undefined,
  "placeholder": Object {
    "text": "a placeholder",
    "type": "plain_text",
  },
  "type": "users_select",
}
`;
